novu/prod/api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novu-api
  labels:
    app.kubernetes.io/name: novu
    helm.sh/chart: novu-0.1.6
    app.kubernetes.io/instance: novu
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: novu-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: novu
      app.kubernetes.io/instance: novu
      app.kubernetes.io/component: novu-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: novu
        helm.sh/chart: novu-0.1.6
        app.kubernetes.io/instance: novu
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: novu-api
    spec:
      serviceAccountName: novu
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: novu
                    app.kubernetes.io/instance: novu
                    app.kubernetes.io/component: novu-api
                topologyKey: kubernetes.io/hostname
              weight: 1

      containers:
        - name: novu-api
          image: ghcr.io/novuhq/novu/api:0.15.0
          imagePullPolicy: IfNotPresent
          resources:
            limits: {}
            requests: {}
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /v1/health-check
              port: http
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /v1/health-check
              port: http
