novu/prod/api/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: novu-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.novu.naturalselectionlabs.com`)
      services:
        - name: novu-api
          port: 3000
